force-app/main/default/objects/PPRS_General_Settings__mdt/PPRS_General_Settings__mdt.object-meta.xml
<CustomObject>
    <label>PPRS General Setting</label>
    <pluralLabel>PPRS General Settings</pluralLabel>
</CustomObject>