force-app/main/default/objects/PPRS_General_Settings__mdt/fields/Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>Chunk_Size__c</fullName>
    <label>Chunk Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>