force-app/main/default/objects/PPRS_General_Settings__mdt/fields/Csv_Generator_Class__c.field-meta.xml
<CustomField>
    <fullName>Csv_Generator_Class__c</fullName>
    <label>Csv Generator Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>