force-app/main/default/objects/PPRS_General_Settings__mdt/fields/Logger_Class__c.field-meta.xml
<CustomField>
    <fullName>Logger_Class__c</fullName>
    <label>Logger Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>