force-app/main/default/objects/PPRS_General_Settings__mdt/fields/Request_Class__c.field-meta.xml
<CustomField>
    <fullName>Request_Class__c</fullName>
    <label>Request Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>