force-app/main/default/objects/PPRS_General_Settings__mdt/fields/Sync_Class__c.field-meta.xml
<CustomField>
    <fullName>Sync_Class__c</fullName>
    <label>Sync Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>